# anki-gpt-desktop

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-release.yml
anki_integration/: Cargo.toml
anki_integration/src/: lib.rs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: FileSelector.tsx
src/pages/: AnswerPage.tsx  ApiKeyPage.tsx  NotesPage.tsx
sync_anki_process/: Cargo.toml
sync_anki_process/src/: lib.rs
