[package]
name = "sync_anki_process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.37.0", features=["full"]}
anki_integration = { path = "../anki_integration" }
serde = "1.0.202"
serde_json = "1.0.117"
